# qaf-templates

./: Cargo.toml  README.md  [GEN]Cargo.toml  [GEN]README.md  build.rs  config.rs  dev.sh  tmux.conf
Actix/: .env.example  Cargo.toml  Dockerfile  build.rs
Actix/src/: lib.rs  main.rs  websockets.rs
Axum/: Cargo.toml  README.md  build.rs  cache.Dockerfile
Axum/src/: lib.rs  main.rs  router.rs
Axum/src/pages/: test.rs
Axum/src/pages/:id/: dsa.rs
Cloudflare/: .gitignore  Cargo.toml  build.rs  package.json  wrangler.toml
Cloudflare/src/: lib.rs  router.rs
Cloudflare/src/pages/: old.rs  test.rs  tests.rs
Cloudflare/src/pages/:id/: cxzcxz.rs
Cloudflare/src/pages/nested/: dsa.rs
Cloudflare/src/pages/test/: dsa.rs
Vercel/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json  vercel.json
Vercel/api/: index.ts
Vercel/src/: lib.rs  router.rs  structs.rs
Vercel/src/pages/: test.rs
Vercel/src/pages/:id/: cxz.rs
backend/: .env.example  Cargo.toml
backend/src/pages/: hello.rs
src/: [GEN]lib.rs  [GEN]main.rs  actix_scope.rs  lib.rs  main.rs
src/pages/: hello.rs
src/pages/nested/: hello_there.rs
