[package]
name = "rust_project_name_t"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.6"
rand = "0.8.5"
tokio = { version = "1.26.0", features = ["full"] }
#[[IF DATABASE Postgres(SQLX)]]
sqlx = { version = "0.6.3", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }
#[[ENDIF]]
#[[IF DATABASE Mysql(SQLX)]]
sqlx = { version = "0.6.3", features = [
    "mysql",
    "macros",
    "runtime-tokio-rustls",
] }
#[[ENDIF]]
#[[IF WEBSOCKET Tungstenite]]
tokio-tungstenite = "0.18.0"
futures-channel = "0.3.27"
futures-util = "0.3.27"
#[[ENDIF]]

[build-dependencies]
qaf-build-utils = "0.1.0"
serde = { version = "1.0.159", features = ["derive"] }
anyhow = "1.0.70"
serde_json = "1.0.95"
rust-format = "0.3.4"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
