[package]
name = "rust_project_name_t"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
futures = "0.3.28"
tracing = "0.1.37"
tokio-util = { version = "0.7.8", features = ["io"] }
qaf-macros = { version = "0.2.2", features = ["axum"] }
tower-http = { version = "0.4.1", features = ["limit", "trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
#[[IF DATABASE Postgres(SQLX)]]
sqlx = { version = "0.7.0", features = [
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }
#[[ENDIF]]
#[[IF DATABASE Mysql(SQLX)]]
sqlx = { version = "0.7.0", features = [
    "mysql",
    "macros",
    "runtime-tokio-rustls",
] }
#[[ENDIF]]
#[[IF WEBSOCKET Tungstenite]]
futures-util = "0.3.28"
futures-channel = "0.3.28"
tokio-tungstenite = "0.19.0"
#[[ENDIF]]

[build-dependencies]
qaf-build-utils = "0.1.0"
serde = { version = "1.0.166", features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.99"
rust-format = "0.3.4"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
