[package]
name = "rust_project_name_t"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"
fnstack-cf-macro = { version = "0.2.2", features = ["cloudflare"] }

[build-dependencies]
fnstack-build-utils = "0.1.0"
serde = { version = "1.0.159", features = ["derive"] }
anyhow = "1.0.70"
serde_json = "1.0.95"
rust-format = "0.3.4"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
