[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

qaf-macros = { version = "0.2.2", features = ["cloudflare"] }
wasm-bindgen-futures = "0.4.37"
url = "2.4.0"
web-sys = { version = "0.3.64", features = ["console"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
serde-wasm-bindgen = "0.5.0"
reqwest = "0.11.18"
anyhow = "1.0.71"
#qaf-router = { path = "../../qaf-router", version = "0.1.1" }
qaf-router = "0.1.1"

#[[IF DATABASE Planetscale]]
planetscale-driver = "*"
#[[ENDIF]]

[build-dependencies]
qaf-build-utils = "0.1.0"
serde = { version = "1.0.166", features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.99"
rust-format = "0.3.4"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
